@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configurations lcid_type="UserExe" show_language_selector="False" language_selector_title="" language_selector_ok="OK" language_selector_cancel="Cancel" configuration_no_match_message="" ui_level="full" fileversion="0.4.5.0" productversion="0.4.5.0" log_enabled="False" log_file="#TEMPPATH\dotNetInstallerLog.txt">
+<configurations lcid_type="UserExe" show_language_selector="False" language_selector_title="" language_selector_ok="OK" language_selector_cancel="Cancel" configuration_no_match_message="" ui_level="full" fileversion="0.4.6.0" productversion="0.4.6.0" log_enabled="False" log_file="#TEMPPATH\dotNetInstallerLog.txt">
   <schema version="1.10.1525.0" generator="dotNetInstaller InstallerEditor" />
   <fileattributes>
     <fileattribute name="ProductName" value="Swish" />
